# qmpris

./: .gitignore  CMakeLists.txt  README.md  loadQMpris.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
QMpris/: QMpris.cpp  QMpris.h  QMpris.pro
libMpris/: .directory  CMakeLists.txt  MediaPlayer2Player.cpp  MediaPlayer2Player.h  QMpris.cpp  QMpris.h  QMpris.pro  libQMpris.so.1.0  moc_QMpris.cpp
