cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

PROJECT(qmpris)

FIND_PACKAGE(Qt4 REQUIRED)

SET(QT_USE_QTDBUS TRUE)

SET(qmpris_SOURCES QMpris.cpp)
SET(qmpris_HEADERS QMpris.h)

QT4_WRAP_CPP(qmpris_HEADERS_MOC ${qmpris_HEADERS})

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_EXECUTABLE(qmpris ${qmpris_SOURCES} 
    ${qmpris_HEADERS_MOC}
)
TARGET_LINK_LIBRARIES(qmpris ${QT_LIBRARIES})